made notifications, wrote tests, made users routes, changed makefile
